--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "ndb server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,8 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "ndb": "^1.1.5",
+    "nodemon": "^2.0.20",
+    "validator": "^13.9.0"
   }
 }
