signup and login

--- a/config.env
+++ b/config.env
@@ -3,3 +3,6 @@ PORT = 8000
 DATABASE_USERNAME = ragul
 DATABASE_PASSWORD = Vgg0MMnIeD1KNliQ
 DATABASE = mongodb+srv://ragul:<PASSWORD>@cluster0.ehwfx.mongodb.net?retryWrites=true&w=majority
+
+JWT_SECRET = ragul-from-ukl-with-secret-code-and-id
+JWT_EXPIRES_IN = 2d
