--- a/config.env
+++ b/config.env
@@ -5,4 +5,4 @@ DATABASE_PASSWORD = Vgg0MMnIeD1KNliQ
 DATABASE = mongodb+srv://ragul:<PASSWORD>@cluster0.ehwfx.mongodb.net?retryWrites=true&w=majority
 
 JWT_SECRET = ragul-from-ukl-with-secret-code-and-id
-JWT_EXPIRES_IN = 2d
+JWT_EXPIRES_IN = 1D
