password forgot and sending email fucntionlaity

--- a/config.env
+++ b/config.env
@@ -6,3 +6,9 @@ DATABASE = mongodb+srv://ragul:<PASSWORD>@cluster0.ehwfx.mongodb.net?retryWrites
 
 JWT_SECRET = ragul-from-ukl-with-secret-code-and-id
 JWT_EXPIRES_IN = 1D
+
+
+EMAIL_USERNAME = 61ef789d1e2560
+EMAIL_PASSWORD = 6c9e22a6c3159b
+EMAIL_HOST = sandbox.smtp.mailtrap.io
+EMAIL_POST = 25
