--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
     "ndb": "^1.1.5",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "validator": "^13.9.0"
   }
