update me , delete me , cookie

--- a/config.env
+++ b/config.env
@@ -6,6 +6,7 @@ DATABASE = mongodb+srv://ragul:<PASSWORD>@cluster0.ehwfx.mongodb.net?retryWrites
 
 JWT_SECRET = ragul-from-ukl-with-secret-code-and-id
 JWT_EXPIRES_IN = 1D
+JWT_COOKIES_EXPIRES_IN = 1
 
 
 EMAIL_USERNAME = 61ef789d1e2560
